--- a/contact.html
+++ b/contact.html
@@ -113,19 +113,19 @@
       </div>
     </header>
     <!-- End Header ---------------------------------------------------------------------------------------------------------------------->
-    <main id="fastTrack">
-      <section class="banner" style="background-image: url('./public/image/fast-track.png')">
+    <main id="contact">
+      <section class="banner" style="background-image: url('./public/image/contact.jpg')">
         <div class="bgBanner"></div>
         <div class="content">
           <div class="container">
-            <h1 class="title">Fast Track</h1>
+            <h1 class="title">CONTACT US</h1>
             <div class="row">
                 <div class="col-md-4">
                   <div class="formBox">
                     <ul>
-                      <li><a href="">Overview </a></li>
-                      <li><a href="">Fees</a></li>
-                      <li><a href="">How to apply</a></li>
+                      <li><a href="">Company Information </a></li>
+                      <li><a href="">Form Contact</a></li>
+                      <li><a href="">Map</a></li>
                     </ul>
                     <a href="" class="btnApply transition">Apply now</a>
                   </div>
@@ -134,144 +134,152 @@
           </div>
         </div>
       </section>
-      <section class="documents">
+      <section>
         <div class="container">
-          <h4 class="title">fAST tRACK Overview</h4>
-          <p>Fast Track  is an airport priority service that allow passengers expedited through all the airport procedures without staying in long queue to get line and wait for the endless line at the Airport.</p>
+          <h4 class="title">COMPANY INFORMATION</h4>
+          <h5><strong>COMPANY NAME - </strong></h5>
           <div class="row">
-            <div class="col-md-6">
-              <div class="box box-4">
-                <h5>Arrival Fast track</h5>
-                <div class="info">
-                  <p><strong>Meet & Greet at arrival airport</strong><br>
-                    Our staff will wait with the name board to meet you at the Landing Visa & Immigration Area (where allowed).</p>
-                  <p><strong>Visa & Immigration Procedure and Security clearance</strong><br>
-                    Once you land, our staff will assist you with the flight procedures such as acquiring a Visa, getting through passport control without waiting in a long queue, customs and security clearance.</p>
-                  <p><strong>Porter service</strong><br>
-                    Our staff collect your luggage at the baggage claim area and bring it to your vehicle.</p>
-                </div>
+            <div class="col-md-4">
+              <div class="boxContactInfo">
+                  <img src="./public/image/address-icon.png" alt="">
+                  <h5>Address</h5>
+                  <p><strong>You can visit us here:</strong></p>
+                  <br>
+                  <p>No. 123, Street 456 ,Ward ABC, District ABC, Country</p>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="box box-4">
-                <h5>Departure fast track</h5>
-                <div class="info">
-                  <p><strong>Meet & Greet at departure airport</strong><br>
-                    Our staff will wait with the name board to meet you at the curb<br>
-                    Note: Meeting points vary according to specific airports</p>
-                  <p><strong>Porter service</strong><br>
-                    It includes collecting luggage from your vehicle to the check-in point.</p>
-                  <p><strong>Check-in assistance</strong><br>
-                    Our staff will assist you during the check-in procedure at check-in counter without having to waiting in airport lines.</p>
-                  <p><strong>Get through the passport & customs counter</strong><br>
-                    Our staff will assist you to get through the passport and customs counter without standing in a long queue.</p>
-                </div>
+            <div class="col-md-4">
+              <div class="boxContactInfo">
+                  <img src="./public/image/phone-icon.png" alt="">
+                  <h5>Hotline</h5>
+                  <p><strong>Call us:</strong></p>
+                  <br>
+                  <p>(+84) 123-456-789</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="boxContactInfo">
+                  <img src="./public/image/mail-icon.png" alt="">
+                  <h5>Email</h5>
+                  <p><strong>Send us emails at:</strong></p>
+                  <br>
+                  <p>abc123@gmail.com</p>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="documents">
+      <section>
         <div class="container">
-          <h4 class="title">Fees</h4>
-          <div class="table-responsive feeTable">
-            <table class="table table-default table-bordered">
-              <thead>
-                <tr>
-                  <th scope="col">Type</th>
-                  <th scope="col">Fee</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="">
-                  <td scope="row">Normal Fast Track (Arrival & Departure)</td>
-                  <td>45 USD/passenger</td>
-                </tr>
-                <tr class="">
-                  <td scope="row">V.I.P Fast Track (Arrival & Departure)</td>
-                  <td>68 USD/passenger</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </section>
-      <section class="apply">
-        <div class="container">
-          <h4 class="title">How to apply</h4>
-          <div class="row">
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto1.png" alt="">
-                <h5>Step 1</h5>
-                <p>Complete Service Application Form on our website</p>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto2.png" alt="">
-                <h5>Step 2</h5>
-                <p>Confirm all information and submit payment via our payment gateways</p>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto3.png" alt="">
-                <h5>Step 3</h5>
-                <p>Get an Email confirming payment submitted and an estimated time receiving e-visa approval</p>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto5.png" alt="">
-                <h5>Step 4</h5>
-                <p>Meet and connect with your personal chauffeur at Vietnam’s airport</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="apply">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <h4 class="title">How Can You find OUr FASt Track Team AT The airporT?</h4>
-              <p><strong>For Arrival:</strong> When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast. When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast.
-              <p><strong>For Departure:</strong> When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast. When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast.
-              </p>
-            </div>
-            <div class="col-md-6">
-              <div class="imageSlider owl-carousel owl-theme">
-                <div class="item">
-                  <img src="./public/image/fly-map.png" alt="">
+          <h4 class="title">CONTACT US</h4>
+          <p>Please get in touch with us, we'd like to hear fron you and will reach to you as soon as possible!</p>
+          <form action="">
+            <div class="boxForm">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="mb-3">
+                    <label for="" class="form-label"><strong>Frist Name</strong> <span style="color:red">*</span></label>
+                    <input type="text" class="form-control" name="firstName" id="firstName" aria-describedby="helpId" placeholder="">
+                    <small class="form-text">It’s required, please try again!</small>
+                  </div>
                 </div>
-                <div class="item">
-                  <img src="./public/image/fly-map.png" alt="">
+                <div class="col-md-6">
+                  <div class="mb-3">
+                    <label for="" class="form-label"><strong>Last Name</strong> <span style="color:red">*</span></label>
+                    <input type="text" class="form-control" name="lastName" id="lastName" aria-describedby="helpId" placeholder="">
+                    <small class="form-text">It’s required, please try again!</small>
+                  </div>
                 </div>
               </div>
-              <div class="imageSliderControl"><i class="transition fa-solid fa-chevron-left slideLeft"></i>
-                <i class="transition fa-solid fa-chevron-right slideRight"></i></div>
-              <script>
-                $( document ).ready(function() {
-                  var owl = $('.imageSlider');
-                  owl.owlCarousel({
-                    loop:true,
-                    margin:40,
-                    dots:false,
-                    nav:false,
-                    items:1
-                  })
-                  $('.slideLeft').click(function() {
-                      owl.trigger('prev.owl.carousel')
-                  })
-                  // Go to the previous item
-                  $('.slideRight').click(function() {
-                      owl.trigger('next.owl.carousel')
-                  })
-                })
-              </script>
+              <div class="mb-3">
+                <label for="" class="form-label"><strong>Email</strong> <span style="color:red">*</span></label>
+                <input type="text" class="form-control" name="email" id="email" aria-describedby="helpId" placeholder="">
+                <small class="form-text">It’s required, please try again!</small>
+              </div>
+              <div class="mb-3">
+                <label for="" class="form-label"><strong>Phone Number</strong> <span style="color:red">*</span></label>
+                <div class="boxPhone">
+                  <div class="boxPhoneItem" style="width: 100px">
+                    <select class="form-select form-select-lg" name="" id="">
+                      <option selected value="">+84</option>
+                      <option value="">+84</option>
+                      <option value="">+84</option>
+                    </select>
+                  </div>
+                  <div class="boxPhoneItem" style="padding-left: 10px;">
+                    <input type="text" class="form-control" name="phone" id="phone" aria-describedby="helpId" placeholder="">
+                  </div>
+                </div>
+                <small class="form-text">It’s required, please try again!</small>
+              </div>
+              <div class="mb-3">
+                <label for="" class="form-label"><strong>Service Types*</strong> <span style="color:red">*</span></label>
+                <select class="form-select form-select-lg" name="serviceTypes" id="serviceTypes">
+                  <option selected value="">Select one</option>
+                  <option value="">New Delhi</option>
+                  <option value="">Istanbul</option>
+                  <option value="">Jakarta</option>
+                </select>
+                <small class="form-text">It’s required, please try again!</small>
+              </div>
+              <div class="mb-3">
+                <label for="" class="form-label"><strong>Message</strong></label>
+                <textarea class="form-control" name="" id="" rows="5"></textarea>
+              </div>
+              <div class="text-center">
+                <input name="" class="btnSendContact" type="button" value="Send message">
+              </div>
             </div>
-          </div>
+            <script>
+              $('.btnSendContact').click(function () {
+                  let error = 0
+                  if ($('#firstName').val() == '') {
+                    $('#firstName').parents('.mb-3').addClass('error')
+                    error++
+                  } else {
+                    $('#firstName').parents('.mb-3').removeClass('error')
+                  }
+
+                  if ($('#lastName').val() == '') {
+                    $('#lastName').parents('.mb-3').addClass('error')
+                    error++
+                  } else {
+                    $('#lastName').parents('.mb-3').removeClass('error')
+                  }
+                  
+                  if ($('#email').val() == '') {
+                    $('#email').parents('.mb-3').addClass('error')
+                    error++
+                  } else {
+                    $('#email').parents('.mb-3').removeClass('error')
+                  }
+                  
+                  if ($('#phone').val() == '') {
+                    $('#phone').parents('.mb-3').addClass('error')
+                    error++
+                  } else {
+                    $('#phone').parents('.mb-3').removeClass('error')
+                  }
+
+                  if ($('#serviceTypes').val() == '') {
+                    $('#serviceTypes').parents('.mb-3').addClass('error')
+                    error++
+                  } else {
+                    $('#serviceTypes').parents('.mb-3').removeClass('error')
+                  }
+
+                  if(error === 0) {
+                    $('form').submit()
+                  }
+              })
+            </script>
+          </form>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h4 class="title">MAP</h4>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.4408477184875!2d106.65226477578408!3d10.777508259172254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752eb8e133f271%3A0xb80bdd892535dd1f!2zNDAgVGhpw6puIFBoxrDhu5tjLCBQaMaw4budbmcgOSwgVMOibiBCw6xuaCwgVGjDoG5oIHBo4buRIEjhu5MgQ2jDrSBNaW5oLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1690113593269!5m2!1sen!2s" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
     </main>
