--- a/e-sim.html
+++ b/e-sim.html
@@ -114,18 +114,19 @@
     </header>
     <!-- End Header ---------------------------------------------------------------------------------------------------------------------->
     <main id="fastTrack">
-      <section class="banner" style="background-image: url('./public/image/fast-track.png')">
+      <section class="banner" style="background-image: url('./public/image/e-sim.png')">
         <div class="bgBanner"></div>
         <div class="content">
           <div class="container">
-            <h1 class="title">Fast Track</h1>
+            <h1 class="title">eSIM</h1>
             <div class="row">
                 <div class="col-md-4">
                   <div class="formBox">
                     <ul>
-                      <li><a href="">Overview </a></li>
-                      <li><a href="">Fees</a></li>
+                      <li><a href="">Overview and Eligibility </a></li>
+                      <li><a href="">Processing Time and Fees</a></li>
                       <li><a href="">How to apply</a></li>
+                      <li><a href="">How to  Use e-Sim</a></li>
                     </ul>
                     <a href="" class="btnApply transition">Apply now</a>
                   </div>
@@ -134,142 +135,164 @@
           </div>
         </div>
       </section>
-      <section class="documents">
+      <section>
         <div class="container">
-          <h4 class="title">fAST tRACK Overview</h4>
-          <p>Fast Track  is an airport priority service that allow passengers expedited through all the airport procedures without staying in long queue to get line and wait for the endless line at the Airport.</p>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="box box-4">
-                <h5>Arrival Fast track</h5>
-                <div class="info">
-                  <p><strong>Meet & Greet at arrival airport</strong><br>
-                    Our staff will wait with the name board to meet you at the Landing Visa & Immigration Area (where allowed).</p>
-                  <p><strong>Visa & Immigration Procedure and Security clearance</strong><br>
-                    Once you land, our staff will assist you with the flight procedures such as acquiring a Visa, getting through passport control without waiting in a long queue, customs and security clearance.</p>
-                  <p><strong>Porter service</strong><br>
-                    Our staff collect your luggage at the baggage claim area and bring it to your vehicle.</p>
+          <div class="contenBorder">
+            <h4 class="title"> WHAT IS eSIM?</h4>
+            <hr width="80px">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="boxInfo">
+            <h4 class="title"> Type and Information eSIM</h4>
+            <div class="boxContent">
+              <div style="margin-bottom: 30px;">
+                <div class="infoContent th">
+                  <div class="infoContentItem">
+                    Vietnam eSIM 2GB/day for 90 days
+                  </div>
+                  <div class="infoContentItem">
+                    Voice, SMS and data eSIM
+                  </div>
+                </div>
+                <div class="infoContent">
+                  <div class="infoContentItem">
+                    <ul>
+                      <li>Vietnam eSIM 2GB/day for 90 days</li>
+                      <li>Voice, SMS and data eSIM</li>
+                    </ul>
+                  </div>
+                  <div class="infoContentItem">
+                    <ul>
+                      <li>Delivery time: Immediately after order checkout successfully</li>
+                      <li>Delivery: via the registered email</li>
+                      <li>Validity start: when you activate your eSIM </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="box box-4">
-                <h5>Departure fast track</h5>
-                <div class="info">
-                  <p><strong>Meet & Greet at departure airport</strong><br>
-                    Our staff will wait with the name board to meet you at the curb<br>
-                    Note: Meeting points vary according to specific airports</p>
-                  <p><strong>Porter service</strong><br>
-                    It includes collecting luggage from your vehicle to the check-in point.</p>
-                  <p><strong>Check-in assistance</strong><br>
-                    Our staff will assist you during the check-in procedure at check-in counter without having to waiting in airport lines.</p>
-                  <p><strong>Get through the passport & customs counter</strong><br>
-                    Our staff will assist you to get through the passport and customs counter without standing in a long queue.</p>
-                </div>
-              </div>
+              <p><strong>Note:</strong> Please provide us your passport number to activate eSIM</p>
+              <p><strong>PRICE:</strong>  $29.00</p>
             </div>
           </div>
         </div>
       </section>
-      <section class="documents">
+      <section>
         <div class="container">
-          <h4 class="title">Fees</h4>
-          <div class="table-responsive feeTable">
-            <table class="table table-default table-bordered">
-              <thead>
-                <tr>
-                  <th scope="col">Type</th>
-                  <th scope="col">Fee</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="">
-                  <td scope="row">Normal Fast Track (Arrival & Departure)</td>
-                  <td>45 USD/passenger</td>
-                </tr>
-                <tr class="">
-                  <td scope="row">V.I.P Fast Track (Arrival & Departure)</td>
-                  <td>68 USD/passenger</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <h4 class="title"> LIST OF eSIM COMPATIBLE DEVICES</h4>
+          <p>Please click into this link to view the PDF Link: <a href="#" style="text-decoration: underline;"><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</strong></a>.</p>
         </div>
       </section>
       <section class="apply">
         <div class="container">
-          <h4 class="title">How to apply</h4>
-          <div class="row">
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto1.png" alt="">
-                <h5>Step 1</h5>
-                <p>Complete Service Application Form on our website</p>
+          <h4 class="title">How to REGISTER</h4>
+          <div class="d-none d-lg-none d-xl-block d-xxl-block">
+            <div class="row">
+              <div class="col">
+                <div class="item">
+                  <img src="./public/image/howto1.png" alt="">
+                  <h5>Step 1</h5>
+                  <p>Complete Service Application Form on our website</p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="item">
+                  <img src="./public/image/howto2.png" alt="">
+                  <h5>Step 2</h5>
+                  <p>Confirm all information and submit payment via our payment gateways</p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="item">
+                  <img src="./public/image/howto3.png" alt="">
+                  <h5>Step 3</h5>
+                  <p>Get an Email confirming payment submitted and an estimated time receiving e-visa approval</p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="item">
+                  <img src="./public/image/scan.png" alt="">
+                  <h5>Step 4</h5>
+                  <p>Receive an email with QR code and eSIM information</p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="item">
+                  <img src="./public/image/phone-step.png" alt="">
+                  <h5>Step 5</h5>
+                  <p> Install eSIM according to the instructions as in our website</p>
+                </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto2.png" alt="">
-                <h5>Step 2</h5>
-                <p>Confirm all information and submit payment via our payment gateways</p>
+          </div>
+          <div class="d-block d-xl-none d-xxl-none">
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="item">
+                  <img src="./public/image/howto1.png" alt="">
+                  <h5>Step 1</h5>
+                  <p>Complete Service Application Form on our website</p>
+                </div>
               </div>
-            </div>
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto3.png" alt="">
-                <h5>Step 3</h5>
-                <p>Get an Email confirming payment submitted and an estimated time receiving e-visa approval</p>
+              <div class="col-xs-12">
+                <div class="item">
+                  <img src="./public/image/howto2.png" alt="">
+                  <h5>Step 2</h5>
+                  <p>Confirm all information and submit payment via our payment gateways</p>
+                </div>
               </div>
-            </div>
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto5.png" alt="">
-                <h5>Step 4</h5>
-                <p>Meet and connect with your personal chauffeur at Vietnam’s airport</p>
+              <div class="col-xs-12">
+                <div class="item">
+                  <img src="./public/image/howto3.png" alt="">
+                  <h5>Step 3</h5>
+                  <p>Get an Email confirming payment submitted and an estimated time receiving e-visa approval</p>
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <div class="item">
+                  <img src="./public/image/scan.png" alt="">
+                  <h5>Step 4</h5>
+                  <p>Receive an email with QR code and eSIM information</p>
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <div class="item">
+                  <img src="./public/image/phone-step.png" alt="">
+                  <h5>Step 5</h5>
+                  <p> Install eSIM according to the instructions as in our website</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="apply">
+      <section class="howToActive">
         <div class="container">
+          <h4 class="title">How to ACTIVATE</h4>
           <div class="row">
-            <div class="col-md-6">
-              <h4 class="title">How Can You find OUr FASt Track Team AT The airporT?</h4>
-              <p><strong>For Arrival:</strong> When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast. When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast.
-              <p><strong>For Departure:</strong> When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast. When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast.
-              </p>
-            </div>
-            <div class="col-md-6">
-              <div class="imageSlider owl-carousel owl-theme">
-                <div class="item">
-                  <img src="./public/image/fly-map.png" alt="">
-                </div>
-                <div class="item">
-                  <img src="./public/image/fly-map.png" alt="">
-                </div>
+            <div class="col-md-4">
+              <div class="boxItem">
+                  <img src="./public/image/iphone.png" alt="">
+                  <h5 class="name">ON IPHONE</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
-              <div class="imageSliderControl"><i class="transition fa-solid fa-chevron-left slideLeft"></i>
-                <i class="transition fa-solid fa-chevron-right slideRight"></i></div>
-              <script>
-                $( document ).ready(function() {
-                  var owl = $('.imageSlider');
-                  owl.owlCarousel({
-                    loop:true,
-                    margin:40,
-                    dots:false,
-                    nav:false,
-                    items:1
-                  })
-                  $('.slideLeft').click(function() {
-                      owl.trigger('prev.owl.carousel')
-                  })
-                  // Go to the previous item
-                  $('.slideRight').click(function() {
-                      owl.trigger('next.owl.carousel')
-                  })
-                })
-              </script>
+            </div>
+            <div class="col-md-4">
+              <div class="boxItem">
+                <img src="./public/image/samsung.png" alt="">
+                  <h5 class="name">On Samsung</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="boxItem">
+                  <img src="./public/image/googlepx.png" alt="">
+                  <h5 class="name">On GOOGLE PIXEL</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
             </div>
           </div>
         </div>
