--- a/pricing.html
+++ b/pricing.html
@@ -113,163 +113,95 @@
       </div>
     </header>
     <!-- End Header ---------------------------------------------------------------------------------------------------------------------->
-    <main id="fastTrack">
-      <section class="banner" style="background-image: url('./public/image/fast-track.png')">
-        <div class="bgBanner"></div>
-        <div class="content">
+    <main id="pricing">
+      <section class="bannerNormal">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+              <h1 class="title">PRICING</h1>
+              <p class="text-center"><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </strong></p>
+            </div>
+            <div class="col-md-2"></div>
+          </div>
+        </div>
+      </section>
+      <section class="documents">
+        <div class="tabPricing">
           <div class="container">
-            <h1 class="title">Fast Track</h1>
-            <div class="row">
-                <div class="col-md-4">
-                  <div class="formBox">
-                    <ul>
-                      <li><a href="">Overview </a></li>
-                      <li><a href="">Fees</a></li>
-                      <li><a href="">How to apply</a></li>
-                    </ul>
-                    <a href="" class="btnApply transition">Apply now</a>
-                  </div>
-                </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="documents">
-        <div class="container">
-          <h4 class="title">fAST tRACK Overview</h4>
-          <p>Fast Track  is an airport priority service that allow passengers expedited through all the airport procedures without staying in long queue to get line and wait for the endless line at the Airport.</p>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="box box-4">
-                <h5>Arrival Fast track</h5>
-                <div class="info">
-                  <p><strong>Meet & Greet at arrival airport</strong><br>
-                    Our staff will wait with the name board to meet you at the Landing Visa & Immigration Area (where allowed).</p>
-                  <p><strong>Visa & Immigration Procedure and Security clearance</strong><br>
-                    Once you land, our staff will assist you with the flight procedures such as acquiring a Visa, getting through passport control without waiting in a long queue, customs and security clearance.</p>
-                  <p><strong>Porter service</strong><br>
-                    Our staff collect your luggage at the baggage claim area and bring it to your vehicle.</p>
-                </div>
+            <div class="tabList">
+              <div class="item">
+                <a class="active" href="">VISA SERVICES</a>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="box box-4">
-                <h5>Departure fast track</h5>
-                <div class="info">
-                  <p><strong>Meet & Greet at departure airport</strong><br>
-                    Our staff will wait with the name board to meet you at the curb<br>
-                    Note: Meeting points vary according to specific airports</p>
-                  <p><strong>Porter service</strong><br>
-                    It includes collecting luggage from your vehicle to the check-in point.</p>
-                  <p><strong>Check-in assistance</strong><br>
-                    Our staff will assist you during the check-in procedure at check-in counter without having to waiting in airport lines.</p>
-                  <p><strong>Get through the passport & customs counter</strong><br>
-                    Our staff will assist you to get through the passport and customs counter without standing in a long queue.</p>
-                </div>
+              <div class="item">
+                <a href="">AIRPORT SERVICES</a>
+              </div>
+              <div class="item">
+                <a href="">CONSULAR SERVICES</a>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      <section class="documents">
-        <div class="container">
-          <h4 class="title">Fees</h4>
-          <div class="table-responsive feeTable">
-            <table class="table table-default table-bordered">
-              <thead>
-                <tr>
-                  <th scope="col">Type</th>
-                  <th scope="col">Fee</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="">
-                  <td scope="row">Normal Fast Track (Arrival & Departure)</td>
-                  <td>45 USD/passenger</td>
-                </tr>
-                <tr class="">
-                  <td scope="row">V.I.P Fast Track (Arrival & Departure)</td>
-                  <td>68 USD/passenger</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </section>
-      <section class="apply">
-        <div class="container">
-          <h4 class="title">How to apply</h4>
-          <div class="row">
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto1.png" alt="">
-                <h5>Step 1</h5>
-                <p>Complete Service Application Form on our website</p>
-              </div>
+        <div class="bgPricing" style="background-image: url('./public/image/bg-pricing.png')">
+          <div class="container">
+            <div class="clearfix">
+              <h4 class="float-start">eVISA (TOURIST or BUSINESS)</h4>
+              <a href="#" class="float-end applyNow">Apply now</a>
             </div>
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto2.png" alt="">
-                <h5>Step 2</h5>
-                <p>Confirm all information and submit payment via our payment gateways</p>
-              </div>
+            <div class="table-responsive feeTable">
+              <table class="table table-default table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col">Processing Time</th>
+                    <th scope="col">Fee</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="">
+                    <td scope="row">Normal - 3 working days</td>
+                    <td>79 USD/person</td>
+                  </tr>
+                  <tr class="">
+                    <td scope="row">Urgent - 2 working days</td>
+                    <td>109 USD/person</td>
+                  </tr>
+                  <tr class="">
+                    <td scope="row">Emergency - 1 working day</td>
+                    <td>171 USD/person</td>
+                  </tr>
+                  <tr class="">
+                    <td scope="row">Holiday - within 30 minutes (any day)</td>
+                    <td>299 USD/person</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto3.png" alt="">
-                <h5>Step 3</h5>
-                <p>Get an Email confirming payment submitted and an estimated time receiving e-visa approval</p>
-              </div>
+            <div class="clearfix">
+              <h4 class="float-start">eVISA (TOURIST or BUSINESS)</h4>
+              <a href="#" class="float-end applyNow">Apply now</a>
             </div>
-            <div class="col-md-3">
-              <div class="item">
-                <img src="./public/image/howto5.png" alt="">
-                <h5>Step 4</h5>
-                <p>Meet and connect with your personal chauffeur at Vietnam’s airport</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="apply">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <h4 class="title">How Can You find OUr FASt Track Team AT The airporT?</h4>
-              <p><strong>For Arrival:</strong> When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast. When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast.
-              <p><strong>For Departure:</strong> When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast. When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast.
-              </p>
-            </div>
-            <div class="col-md-6">
-              <div class="imageSlider owl-carousel owl-theme">
-                <div class="item">
-                  <img src="./public/image/fly-map.png" alt="">
-                </div>
-                <div class="item">
-                  <img src="./public/image/fly-map.png" alt="">
-                </div>
-              </div>
-              <div class="imageSliderControl"><i class="transition fa-solid fa-chevron-left slideLeft"></i>
-                <i class="transition fa-solid fa-chevron-right slideRight"></i></div>
-              <script>
-                $( document ).ready(function() {
-                  var owl = $('.imageSlider');
-                  owl.owlCarousel({
-                    loop:true,
-                    margin:40,
-                    dots:false,
-                    nav:false,
-                    items:1
-                  })
-                  $('.slideLeft').click(function() {
-                      owl.trigger('prev.owl.carousel')
-                  })
-                  // Go to the previous item
-                  $('.slideRight').click(function() {
-                      owl.trigger('next.owl.carousel')
-                  })
-                })
-              </script>
+            <div class="table-responsive feeTable">
+              <table class="table table-default table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col">Processing Time</th>
+                    <th scope="col">Tourist Visa On Arrival</th>
+                    <th scope="col">Business Visa On Arrival</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="">
+                    <td scope="row">7 - 10 working days </td>
+                    <td>Tourism Visa On Arrival</td>
+                    <td>Contact  for a clear quotation</td>
+                  </tr>
+                  <tr class="">
+                    <td scope="row">4 - 7 working days</td>
+                    <td>Business Visa On Arrival </td>
+                    <td>350 USD/person</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
