--- a/car-pickup.html
+++ b/car-pickup.html
@@ -46,11 +46,20 @@
             </div>
             <div class="boxMenu">
               <ul class="menu">
-                <li class="item"><a href="./index.html">Home</a></li>
-                <li class="item"><a href>Services</a></li>
+                <li class="item">
+                  <a href>Services <i class="fa-solid fa-chevron-down"></i></a>
+                  <ul class="subMenu">
+                    <li><a href="">eVisa</a></li>
+                    <li><a href="">Visa On Arrival (VOA)</a></li>
+                    <li><a href="">Fast Track</a></li>
+                    <li><a href="">Car Pickup/ Dropoff</a></li>
+                    <li><a href="">eSIM</a></li>
+                    <li><a href="">5 Years Visa Exemption</a></li>
+                  </ul>
+                </li>
                 <li class="item"><a href>Pricing</a></li>
-                <li class="item"><a href>Counties</a></li>
                 <li class="item"><a href="./about-us.html">About us</a></li>
+                <li class="item"><a href>FAQs</a></li>
                 <li class="item"><a href>Resources</a></li>
               </ul>
             </div>
@@ -66,25 +75,37 @@
       <div class="d-block d-xl-none d-xxl-none">
         <div class="topHeader mobile clearfix">
           <div class="float-start">
-            <a href>
+            <a href="./index.html" >
               <img src="./public/image/logo.svg" alt width="30px">
               <img src="./public/image/logo-name.svg" alt width="150px">
             </a>
           </div>
           <div class="float-end"><i class="fa-solid fa-bars" show="0"></i></div>
           <div class="boxMenuMobile transition">
-            <a href>
-              <div class="account">
+            <div class="boxAccount clearfix">
+              <div class="account float-start">
                 <i class="fa-solid fa-user"></i>
                 <div class="fullName">My account</div>
               </div>
-            </a>
+              <div class="langMobile float-end">
+                <a class="langItem active">EN</a><a class="langItem">VI</a>
+              </div>
+            </div>
             <ul class="menuMobile">
-              <li class="item"><a href="./index.html">Home</a></li>
-              <li class="item"><a href>Services</a></li>
+              <li class="item">
+                <a class="showMenu" status="off">Services <i class="fa-solid fa-chevron-down"></i></a>
+                <ul class="subMenu">
+                  <li><a href="">eVisa</a></li>
+                  <li><a href="">Visa On Arrival (VOA)</a></li>
+                  <li><a href="">Fast Track</a></li>
+                  <li><a href="">Car Pickup/ Dropoff</a></li>
+                  <li><a href="">eSIM</a></li>
+                  <li><a href="">5 Years Visa Exemption</a></li>
+                </ul>
+              </li>
               <li class="item"><a href>Pricing</a></li>
-              <li class="item"><a href>Counties</a></li>
               <li class="item"><a href="./about-us.html">About us</a></li>
+              <li class="item"><a href>FAQs</a></li>
               <li class="item"><a href>Resources</a></li>
             </ul>
           </div>
@@ -92,147 +113,69 @@
       </div>
     </header>
     <!-- End Header ---------------------------------------------------------------------------------------------------------------------->
-    <main id="eVisa">
-      <section class="banner" style="background-image: url('./public/image/rectangle-777.png')">
+    <main id="fastTrack">
+      <section class="banner" style="background-image: url('./public/image/bg-car-pickup.png')">
         <div class="bgBanner"></div>
         <div class="content">
           <div class="container">
-            <h1 class="title">eVisa</h1>
+            <h1 class="title">Car Pickup/ Dropoff</h1>
             <div class="row">
                 <div class="col-md-4">
                   <div class="formBox">
                     <ul>
-                      <li><a href="">Overview and Eligibility</a></li>
-                      <li><a href="">Required Documents</a></li>
+                      <li><a href="">Overview and Eligibility </a></li>
+                      <li><a href="">How Our Service Works?</a></li>
                       <li><a href="">Processing Time and Fees</a></li>
                       <li><a href="">How to apply</a></li>
                     </ul>
                     <a href="" class="btnApply transition">Apply now</a>
                   </div>
                 </div>
-                <div class="col-md-8">
-                  <div class="text-right d-none d-lg-none d-xl-block d-xxl-block">
-                    <img class="imageBanner" src="./public/image/rectangle-776.png" width="400px" alt="">
-                  </div>
-                </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="documents">
+      <section>
         <div class="container">
-          <h4 class="title">Overview and Eligibility</h4>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="box box-1">
-                <h5>TOURIST EVISA </h5>
-                <p>Tourism E-Visa <strong>(30 days - single entry)</strong> is an official travel document issued electronically that permits foreigners to enter and stay within a foreign country. Foreigners traveling to Vietnam as a tourist needs to have a <strong>Tourism Visa</strong> in addition with valid passport as the required travel documents to legally enter the country.</p>
-                <form action="">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <input type="text" name="" class="checkDocuemntInput" placeholder="Enter your nationality" />
-                    </div>
-                    <div class="col-md-6">
-                      <button type="submit" class="btnCheck">Check your eligiblity</button>
-                    </div>
-                  </div>
-                </form>
-                <a href="" class="seeMore">See all 80 eligible countries for eVisa</a>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="box box-1">
-                <h5>business eVisa </h5>
-                <p>Business E-Visa <strong>(30 days - single entry)</strong> is an official travel document issued electronically that permits foreigners to enter and stay within a foreign country. Foreigners traveling to Vietnam as a Businessmen/Businesswomen needs to have a <strong>Business Visa</strong> in addition with valid passport as the required travel documents to legally enter the country.</p>
-                <form action="">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <input type="text" name="" class="checkDocuemntInput" placeholder="Enter your nationality" />
-                    </div>
-                    <div class="col-md-6">
-                      <button type="submit" class="btnCheck">Check your eligiblity</button>
-                    </div>
-                  </div>
-                </form>
-                <a href="" class="seeMore">See all 80 eligible countries for eVisa</a>
-              </div>
-            </div>
-          </div>
+          <h4 class="title"> Overview</h4>
+          <p>Exiting the airport after a long flight, tired and aching, our airport transfer service is the perfect solution taking you direct to your destination. Airport transfer service ensures you a peace of mind when it comes to transportation amid a busy airport, especially in an unfamiliar setting of a foreign country.</p>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h4 class="title"> Our ServiceS</h4>
+          <p>
+            <strong>Meet and greet</strong><br>
+            Your driver will wait to pick you up at the arrival gate of airport or your accommodation
+            <br><br><strong>Point to point</strong><br>
+            For your peace of mind, we will take you directly from Airport to your accommodation or vice versa
+            <br><br><strong>Value</strong>
+            <ul>
+              <li>We offer a wide range of vehicles from economy to luxury to match all your preferences. All our drivers are certified professionals with excellent driving records. </li>
+              <li>Our professional drivers are equipped with flight tracking, so you can rest assured that we can adjust to any flight delays or cancellation . <br></li>
+              <li>Our customer support team also promptly accompanies you through all steps of the journey.</p></li>
+            </ul>
         </div>
       </section>
       <section class="documents">
         <div class="container">
-          <h4 class="title">Required Documents</h4>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="box box-2">
-                <h5>tourist visa ON aRRIVAL</h5>
-                <p>You will need to give us <strong>all</strong> of the documents below so we can help you obtain Tourist Visa On Arrival from Vietnam Government.</p>
-                <ul class="listToggle">
-                  <li>
-                    <h6 status="off">Passport Photo <i class="fa-solid fa-chevron-down"></i></h6>
-                    <p>Lorem ipsum dolor sit amet consectetur. Id etiam pretium at lorem turpis parturient tellus arcu lectus.</p>
-                  </li>
-                  <li>
-                    <h6 status="off">Return Air Ticket <i class="fa-solid fa-chevron-down"></i></h6>
-                    <p>Lorem ipsum dolor sit amet consectetur. Id etiam pretium at lorem turpis parturient tellus arcu lectus.</p>
-                  </li>
-                  <li>
-                    <h6 status="off">All Hotel bookings in Vietnam <i class="fa-solid fa-chevron-down"></i></h6>
-                    <p>Lorem ipsum dolor sit amet consectetur. Id etiam pretium at lorem turpis parturient tellus arcu lectus.</p>
-                  </li>
-                  <li>
-                    <h6 status="off">Visa/TRC of other countries if you have <i class="fa-solid fa-chevron-down"></i></h6>
-                    <p>Lorem ipsum dolor sit amet consectetur. Id etiam pretium at lorem turpis parturient tellus arcu lectus.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="box box-2">
-                <h5> Business visa ON arrival</h5>
-                <p>You will need to inform <strong> your sponsor company</strong> in Vietnam send us required documents to email.</p>
-                <ul class="listToggle">
-                  <li>
-                    <h6 status="off">Token USB of Sponsor company<i class="fa-solid fa-chevron-down"></i></h6>
-                    <p>Lorem ipsum dolor sit amet consectetur. Id etiam pretium at lorem turpis parturient tellus arcu lectus.</p>
-                  </li>
-                  <li>
-                    <h6 status="off">Business Certificate Registration<i class="fa-solid fa-chevron-down"></i></h6>
-                    <p>Lorem ipsum dolor sit amet consectetur. Id etiam pretium at lorem turpis parturient tellus arcu lectus.</p>
-                  </li>
-                  <li>
-                    <h6 status="off">Passport scan with company stamp<i class="fa-solid fa-chevron-down"></i></h6>
-                    <p>Lorem ipsum dolor sit amet consectetur. Id etiam pretium at lorem turpis parturient tellus arcu lectus.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="documents">
-        <div class="container">
-          <h4 class="title">Processing time and Fees</h4>
+          <h4 class="title">Fees</h4>
           <div class="table-responsive feeTable">
             <table class="table table-default table-bordered">
               <thead>
                 <tr>
-                  <th scope="col">Processing Time</th>
-                  <th scope="col">Tourist Visa On Arrival</th>
-                  <th scope="col">Business Visa On Arrival</th>
+                  <th scope="col">Vehicle (Economy)</th>
+                  <th scope="col">Fee</th>
                 </tr>
               </thead>
               <tbody>
                 <tr class="">
-                  <td scope="row">7 - 10 working days </td>
-                  <td>Tourism Visa On Arrival</td>
-                  <td>Contact  for a clear quotation</td>
+                  <td scope="row">4 - 7 seats </td>
+                  <td>35 USD</td>
                 </tr>
                 <tr class="">
-                  <td scope="row">4 - 7 working days</td>
-                  <td>Business Visa On Arrival </td>
-                  <td>350 USD/person</td>
+                  <td scope="row">Other </td>
+                  <td>Contact for a clear quotation</td>
                 </tr>
               </tbody>
             </table>
@@ -266,10 +209,53 @@
             </div>
             <div class="col-md-3">
               <div class="item">
-                <img src="./public/image/howto4.png" alt="">
+                <img src="./public/image/howto5.png" alt="">
                 <h5>Step 4</h5>
-                <p>Receive E-Visa via email and travel to Vietnam</p>
+                <p>Meet and connect with your personal chauffeur at Vietnam’s airport</p>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="apply">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h4 class="title">How Can You find OUr Driver AT The airporT?</h4>
+              <p><strong>For Arrival:</strong> When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast. When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast.
+              <p><strong>For Departure:</strong> When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast. When you arrive at Vietnam Airport, our staff will greet you with your name on the welcome board, and then start to assist you get through the customs fast.
+              </p>
+            </div>
+            <div class="col-md-6">
+              <div class="imageSlider owl-carousel owl-theme">
+                <div class="item">
+                  <img src="./public/image/car-pickup.png" alt="">
+                </div>
+                <div class="item">
+                  <img src="./public/image/car-pickup.png" alt="">
+                </div>
+              </div>
+              <div class="imageSliderControl"><i class="transition fa-solid fa-chevron-left slideLeft"></i>
+                <i class="transition fa-solid fa-chevron-right slideRight"></i></div>
+              <script>
+                $( document ).ready(function() {
+                  var owl = $('.imageSlider');
+                  owl.owlCarousel({
+                    loop:true,
+                    margin:40,
+                    dots:false,
+                    nav:false,
+                    items:1
+                  })
+                  $('.slideLeft').click(function() {
+                      owl.trigger('prev.owl.carousel')
+                  })
+                  // Go to the previous item
+                  $('.slideRight').click(function() {
+                      owl.trigger('next.owl.carousel')
+                  })
+                })
+              </script>
             </div>
           </div>
         </div>
